<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- General -->
    <string name="app_name">MoodTrackerApp</string>

    <!-- Bottom Navigation Items (Left to Right) -->
    <string name="nav_common_space">Common Space</string>
    <string name="nav_following_users">Followings</string>
    <string name="nav_mood_map">Mood Map</string>
    <string name="nav_profile">Profile</string>
    <string name="my_map_api_key">AIzaSyAlVnYd5KzVH50RWK8MkmFLSbf5SL3A1_Y</string>



    <string name="nav_followees_moods">Followees Moods</string>


    <!-- Screens / Titles -->
    <string name="title_common_space">Common Space</string>
    <string name="mood_history">Mood History</string>
    <string name="title_followees_moods">Moods from users you are following...</string>

    <!-- Filter Buttons / Actions -->
    <string name="btn_show_last_week">Show Last Week</string>
    <string name="btn_filter_by_mood">Filter by Mood</string>
    <string name="btn_filter_by_keyword">Filter by Keyword</string>
    <string name="btn_clear_filters">Clear Filters</string>

    <!-- Buttons / Actions -->
    <string name="btn_unfollow">Unfollow</string>
    <string name="btn_show_pending_requests">Show Pending Follow Requests</string>
    <string name="btn_details">Details</string>

    <string-array name="locationchoice">
        <item>No</item>
        <item>Yes</item>
    </string-array>
    <!-- spinner item-->
    <string-array name="choices">
        <item>ANGER</item>
        <item>CONFUSION</item>
        <item>DISGUST</item>
        <item>FEAR</item>
        <item>HAPPINESS</item>
        <item>SADNESS</item>
        <item>SHAME</item>
        <item>SURPRISE</item>

    </string-array>

    <string-array name="social_situations">
            <item>None</item>
            <item>Alone</item>
            <item>With one other person</item>
            <item>With two to several people</item>
            <item>With a crowd</item>
    </string-array>

    <string-array name="privacy_levels">
        <item>Public (All Users)</item>
        <item>Followers Only</item>
        <item>Private</item>
    </string-array>

    <string-array name="privacy_values">
        <item>ALL_USERS</item>
        <item>FOLLOWERS_ONLY</item>
        <item>PRIVATE</item>
    </string-array>



    <!-- Dialogs -->
    <string name="dialog_filter_mood_title">Select Mood</string>
    <string name="dialog_filter_mood_happy">😊 Happy</string>
    <string name="dialog_filter_mood_sad">😢 Sad</string>
    <string name="dialog_filter_mood_angry">😡 Angry</string>
    <string name="dialog_filter_mood_scared">😱 Scared</string>

    <string name="dialog_filter_keyword_title">Enter Keyword</string>
    <string name="dialog_filter_keyword_ok">OK</string>
    <string name="dialog_filter_keyword_cancel">Cancel</string>
</resources>


