<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/my_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="16dp"
            android:scaleType="centerCrop"
            tools:srcCompat="@drawable/ic_profile" />

        <TextView
            android:id="@+id/username"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="MY NAME"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="EXIT"
            android:textSize="10sp" />
    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/follow_request_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/my_data"
        android:layout_marginStart="16dp">

        <Button
            android:id="@+id/follow_request_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Requests"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.811"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/follow_request_badge"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:background="@drawable/badge_background"
            android:text="0"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@id/follow_request_button"
            app:layout_constraintEnd_toEndOf="@id/follow_request_button" />

        <Button
            android:id="@+id/btnShowMoodChart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mood Chart"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@id/follow_request_button"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btnFlwInProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Follow"
            android:layout_gravity="center_horizontal"
            app:layout_constraintStart_toEndOf="@id/follow_request_badge"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Filter Buttons (Horizontal) -->
    <LinearLayout
        android:id="@+id/layoutMoodHistoryFilters"
        app:layout_constraintTop_toBottomOf="@id/follow_request_container"
        android:layout_width="368dp"
        android:layout_height="83dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="48dp">

        <Button
            android:id="@+id/btnShowLastMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_show_last_week" />

        <Button
            android:id="@+id/btnFilterByType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/btn_filter_by_mood" />

        <!--        <Button-->
        <!--            android:id="@+id/btnClearFilters"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginStart="8dp"-->
        <!--            android:padding="8dp"-->
        <!--            android:text="@string/btn_clear_filters" />-->
    </LinearLayout>

    <!-- RecyclerView for Moods from Followees -->
    <Button
        android:id="@+id/btnSearchKeyword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_filter_by_keyword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutMoodHistoryFilters" />


    <TextView
        android:id="@+id/recentMoodsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Recent Moods"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSearchKeyword" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/recentMoodsLabel"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigation">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewRecentMoods"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/recentMoodsLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/bottomNavigation"
            android:paddingTop="10dp"
            tools:listitem="@layout/item_mood" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_mood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="Add Mood"
        android:src="@android:drawable/ic_input_add"
        app:backgroundTint="#0097A7"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@android:color/white" />


    <!-- Bottom Navigation Toolbar (Anchored at Bottom) -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/menu_bottom_navigation"
        app:labelVisibilityMode="labeled"
        app:itemHorizontalTranslationEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>